2009-10-20  Miguel de Dios  <miguel.dedios@artica.es>

	* pandora_console/operation/menu.php,
	pandora_console/godmode/reporting/graphs.php,
	pandora_console/godmode/reporting/graph_builder.php: clean debug trace
	functions.
	* pandora_console/godmode/agentes/module_manager.php,
	pandora_console/godmode/alerts/alert_list.php: add the enterprise column
	that it has a icon when the alert or module is make for policy.
	* pandora_console/godmode/agentes/agent_manager.php: fix bug that when
	create a new agent and in the md5 dir has a file with the next name
	d41d8cd98f00b204e9800998ecf8427e, that name is a md5 of empty string. When
	you has this file, the form take as conf file.

2009-10-20  Sancho Lerena <slerena@artica.es>

	* include/help/en/help_alert_macros.php: Updated help. 

	* include/fgraph.php, 
	include/functions_fsgraph.php: Solves a small problem with Flash graphs
	when pandora fms console install dir is "/".

	* include/functions_db.php: Fixed bug #2859919 (Transaction lock timeout).

	* include/error*: Fixed a formatting error and added better error
	message when mysql is up but credentials doesn't work.

2009-10-17  Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_custom_graphs.php, operation/reporting/graph_viewer.php,
	godmode/reporting/graphs.php, godmode/reporting/graph_builder.php,
	godmode/menu.php: change the process to create graphs, now you can edit
	all parts of any grahps (edit, delete, add..) and has a list of graphs.
	Start to add ACL in graphs...only pending test.

2009-10-17  Miguel de Dios  <miguel.dedios@artica.es>

	* godmode/alerts/alert_list.php: set default action in alert combo box when
	you make a new alert.

2009-10-16  Raul Mateos  <raulofpandora@gmail.com>

	* include/config_process.php: Update build after last changes.

	* godmode/agentes/planned_downtime*.php: Improving integrity of 
	appareance in title.

	* Changelog: Correct some dates.

2009-10-16  Sancho Lerena <slerena@artica.es>
