@@ -38,7 +38,6 @@
 	<h1 id="log_f" class="error">Installer active</h1>
 	<div>
 		<img src="images/pandora_logo.png" border="0"></a><br><font size="1">
-		<?php echo $pandora_version; ?>
 		</font>
 	</div>
 	<div class="msg"><br><br>
