@@ -22,7 +22,7 @@
 /**
  * Pandora build version and version 
  */
-$build_version = 'PC091016';
+$build_version = 'PC091020';
 $pandora_version = 'v3.0RC1';
 
 $config['start_time'] = microtime (true);
